[package]
name = "tracing-android"
version = "0.1.2"
authors = ["Oliver Wangler <oliver@wngr.de>", "Actyx AG <developer@actyx.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["tracing", "android", "log"]
description = "Tracing layer to log to Android's logcat"
repository = "https://github.com/Actyx/tracing-android"

[dependencies]
android_log-sys = "0.2.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
